crates/strider-analyze/tests/snapshots/ppc32le__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10010198:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ f2", shape=house, fillcolor="#163030"];
  "11" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v19" [color="#888888", style=dashed];
  "v19" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10010198:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "12" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "10" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "22" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "26" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="φ f1", shape=house, fillcolor="#163030"];
  "11" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v44" [color="#888888", style=dashed];
  "v44" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v45" [color="#888888", style=dashed];
  "v45" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ r4", shape=house, fillcolor="#163030"];
  "11" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v46" [color="#888888", style=dashed];
  "v46" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v47" [color="#888888", style=dashed];
  "v47" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="φ Val", shape=house, fillcolor="#163030"];
  "11" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v50" [color="#888888", style=dashed];
  "v50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v52" [color="#888888", style=dashed];
  "v52" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="φ Mem", shape=house, fillcolor="#163030"];
  "11" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "56" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "58" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v50" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "12" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v50" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "61" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v52" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "5" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v52" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "71" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "83" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "85" -> "83" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "85" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "86" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "87" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "87" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "89" -> "87" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
